<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:layout_margin="20dp"
    android:orientation="vertical">
<!--이미지 뷰 라인-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@android:drawable/ic_menu_my_calendar" />
    </LinearLayout>
    <!--이름 입력 라인-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_name"
            android:textSize="20dp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/Membership_edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_name_input"
            android:layout_marginLeft="10dp"
        />

    </LinearLayout>
    <!--아이디 입력 라인-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_id"
            android:textSize="20dp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/Membership_edit_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_id_input"
            android:layout_marginLeft="10dp"
        />
    </LinearLayout>
    <!--비밀번호 입력 라인-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_pasword"
            android:textSize="20dp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/Membership_edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/signup_pasword_input"
            android:layout_marginLeft="10dp"
        />
    </LinearLayout>
    <!--회원가입 입력 라인-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/Membership_closs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_membership"
            android:textSize="20dp"
            android:textStyle="bold"
            />

    </LinearLayout>
</LinearLayout>