<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".SignlnActivity">

    <!--이미지 뷰 라인 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@android:drawable/ic_lock_power_off" />
    </LinearLayout>

    <!--아이디 라인 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signln_id"
            android:textSize="20dp"
            android:textStyle="bold"
            />


        <EditText
            android:id="@+id/Id_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:hint="@string/signln_id_input"
            />


    </LinearLayout>

    <!--비밀번호 라인 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signln_pasword"
            android:textStyle="bold"
            android:textSize="20dp"
            />
        <EditText
            android:id="@+id/Password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signln_pasword_input"
            android:inputType="textPassword"
            />
    </LinearLayout>

    <!--로그인 회원가입 라인 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <!--로그인 버튼-->
        <Button
            android:id="@+id/Login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signln_login"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginBottom="15dp"
            />
        <!--비밀번호 버튼-->
        <Button
            android:id="@+id/Membership_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signln_membership"
            android:textStyle="bold"
            android:textSize="20dp"
            />
    </LinearLayout>
</LinearLayout>



